fixing spacing 4

--- a/general.css
+++ b/general.css
@@ -57,6 +57,7 @@ body{
 
 .contentDiv {
     position: relative;
+	margin-top: 200px;
 }
 
 @keyframes bouncing {
@@ -74,7 +75,6 @@ body{
     margin-left: -25px;
     position: absolute;
     width: 50px;
-	margin-bottom: 200px;
 }
 
 .alignright{
